projects/vb6parse/snapshots/parsers/cst/library/string/ascw/ascw_in_conditional.snap
---
source: projects/vb6parse/tests/library/string/ascw.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: AscW
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: char
                            - kind: RightParenthesis
                              text: )
                        - kind: Whitespace
                          text: " "
                        - kind: GreaterThanOrEqualOperator
                          text: ">="
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "65"
                    - kind: Whitespace
                      text: " "
                    - kind: AndKeyword
                      text: And
                    - kind: Whitespace
                      text: " "
                    - kind: BinaryExpression
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: AscW
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: char
                            - kind: RightParenthesis
                              text: )
                        - kind: Whitespace
                          text: " "
                        - kind: LessThanOrEqualOperator
                          text: "<="
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "90"
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: isUpper
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: BooleanLiteralExpression
                          children:
                            - kind: TrueKeyword
                              text: "True"
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
